Added media queries for ham menu keep right on screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,3 +98,15 @@ nav {
 /* end ham menu */
 
 /* -------------------------------------------------------Media Queries */
+
+@media only screen and (max-width: 412px){
+  .navbar-brand {
+    width: 250px;
+  }
+}
+
+@media only screen and (max-width: 363px) {
+  .navbar-brand {
+    width: 200px;
+  }
+}
