--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,112 +1,161 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
-  --rose-ebony: #63474dff;
-  --rebecca-purple: #73409dff;
-  --new-york-pink: #e09186ff;
-  --mellow-apricot: #ffbf7dff;
-  --yellow-orange-color-wheel: #fe9b29ff;
-  --madder-lake: #c1403aff;
+    --rose-ebony: #63474dff;
+    --rebecca-purple: #73409dff;
+    --new-york-pink: #e09186ff;
+    --mellow-apricot: #ffbf7dff;
+    --yellow-orange-color-wheel: #fe9b29ff;
+    --madder-lake: #c1403aff;
 }
 
 html,
 body {
-  max-width: 100%;
-  overflow: visible;
-  scroll-behavior: smooth;
-  font-family: 'Roboto', sans-serif;
+    max-width: 100%;
+    overflow: visible;
+    scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
 }
 
 /*----------------------------------------------------------- Nav */
 
 nav {
-  background-color: var(--rebecca-purple);
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+    background-color: var(--rebecca-purple);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
 }
 
 .navbar-brand {
-  height: 100px;
-  width: 300px;
-  background: url('/static/img/design/brand-logo.png') no-repeat center center;
-  background-size: contain;
+    height: 100px;
+    width: 300px;
+    background: url('/static/img/design/brand-logo.webp') no-repeat center center;
+    background-size: contain;
 }
 
 /* ham menu */
 
 .navbar-toggler {
-  width: 65px;
-  height: 65px;
-  border: 2px outset var(--new-york-pink);
-  position: relative;
+    width: 65px;
+    height: 65px;
+    border: 2px outset var(--new-york-pink);
+    border-radius: 8px;
+    position: relative;
 }
 
 .ham {
-  width: 65px;
-  height: 65px;
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-  transition: transform 400ms;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    width: 65px;
+    height: 65px;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transition: transform 400ms;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .center-svg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .hamRotate.active {
-  transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 .hamRotate180.active {
-  transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 .line {
-  fill: none;
-  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-  stroke: white;
-  stroke-width: 5;
-  stroke-linecap: round;
+    fill: none;
+    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+    stroke: white;
+    stroke-width: 5;
+    stroke-linecap: round;
 }
 
 .ham1 .top {
-  stroke-dasharray: 40 139;
+    stroke-dasharray: 40 139;
 }
 
 .ham1 .bottom {
-  stroke-dasharray: 40 180;
+    stroke-dasharray: 40 180;
 }
 
 .ham1.active .top {
-  stroke-dashoffset: -98px;
+    stroke-dashoffset: -98px;
 }
 
 .ham1.active .bottom {
-  stroke-dashoffset: -138px;
+    stroke-dashoffset: -138px;
 }
 
 .navbar-nav .nav-link a {
-  color: white;
-  font-size: 20px;
+    color: white;
+    font-size: 20px;
 }
+
 /* end ham menu */
+
+/* -------------------------------------------------------Footer */
+
+footer {
+    background-color: var(--rebecca-purple);
+    color: white;
+    border-top: 2px inset var(--rebecca-purple);
+}
+
+footer ul {
+    list-style-type: none;
+}
+
+footer .footer-links ul li {
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    border: 2px solid white;
+    border-radius: 50%;
+
+    position: relative;
+
+    cursor: pointer;
+}
+
+footer a,
+.footer-links a {
+    color: white;
+    font-weight: 400;
+}
+
+.footer-links a i {
+    font-size: 24px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+footer ul li a:hover,
+footer .footer-links ul li:hover,
+footer .footer-links ul li:hover a {
+    color: black;
+    border-color: black;
+    transition: all 0.2s ease-in-out;
+}
 
 /* -------------------------------------------------------Media Queries */
 
-@media only screen and (max-width: 412px){
-  .navbar-brand {
-    width: 250px;
-  }
+@media only screen and (max-width: 412px) {
+    .navbar-brand {
+        width: 250px;
+    }
 }
 
 @media only screen and (max-width: 363px) {
-  .navbar-brand {
-    width: 200px;
-  }
+    .navbar-brand {
+        width: 200px;
+    }
 }
