--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,36 +3,71 @@
 {% comment %} Footer {% endcomment %}
 <footer class="container-fluid mt-auto py-5">
     <div class="row">
-        <div class="col-sm-12 col-md-6">
-            <img src="{% static 'img/design/brand-logo.webp' %}" alt="" width="250" class="">
-            <hr class="d-block d-md-none">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+            <img src="{% static 'img/design/brand-logo.webp' %}" alt="FineChop brand logo" width="250">
+            <div class="footer-links mt-3">
+                <ul class="col-12">
+                    <li class="mx-2">
+                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
+                                class="
+                fa-brands fa-facebook-f"></i></a></li>
+                    <li class="mx-2">
+                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
+                                class="
+                fa-brands fa-instagram"></i></a></li>
+                    <li class="mx-2">
+                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
+                                class="fa-brands fa-twitter"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 support-icons">
+            <h4>Support</h4>
             <ul class="mt-3">
                 <li><a class="text-decoration-none" href="tel://0209126583" target="_blank" rel="noopener"
-                        aria-label="Click here to call FineChop"><i class="fa-solid fa-phone"></i> 020 912
-                        6583</a>
+                        aria-label="Click here to call FineChop"><i class="fa-solid fa-phone mr-2"></i>
+                        020-912-6583</a>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a class="text-decoration-none" href="mailto://" target="_blank" rel="noopener"
+                        aria-label="Click here to call FineChop"><i class="fa-solid fa-envelope mr-2"></i> put
+                        email
+                        here</a>
+                </li>
+                <li><a class="text-decoration-none" href="mailto://" target="_blank" rel="noopener"
+                        aria-label="Click here to call FineChop"><i class="fa-solid fa-location-dot mr-2"></i>
+                        Location</a>
+                        </li>
             </ul>
         </div>
-        <div class="col-sm-12 col-md-6 footer-links text-center">
-            <ul class="col-12 text-center">
-                <li class="mx-2">
-                    <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i class="
-                fa-brands fa-facebook-f"></i></a></li>
-                <li class="mx-2">
-                    <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i class="
-                fa-brands fa-instagram"></i></a></li>
-                <li class="mx-2">
-                    <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
-                            class="fa-brands fa-twitter"></i></a></li>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
+            <h4>FineChop</h4>
+            <ul class="mt-3">
+                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                        aria-label="Click here to discover how we built this business in the about section">About
+                        Us</a>
+                </li>
+                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                        aria-label="Click here to view methods of contacting us">Contact Us</a>
+                </li>
+                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                        aria-label="Click here to view our menu">Menu</a>
+                </li>
+                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                        aria-label="Click here to submit an application for a role at FineChop">Jobs</a>
+                </li>
+                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                        aria-label="Click to view privacy policy">Privacy Policy</a>
+                </li>
             </ul>
-            <div class="copyright">
-                &copy; Created by Kristian Colville</a>
-            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
+            <p class="w-75 text-center"><i class="fa-regular fa-envelope mr-2"></i> Stay up to date on the latest from <strong>FineChop</strong></p>
+            <form action="">
+                {% csrf_token %}
+                <label for="email" hidden><a class="sr-only sr-only-focusable" href="#content">Enter your email below to subscribe to our news letter</a></label>
+                <input class="subscription text-center w-75" type="email" id="email" name="email" placeholder="Enter your e-mail address">
+                <button class="btn text-white mt-2 w-75 shadow">Subscribe</button>
+            </form>
         </div>
     </div>
 </footer>
