--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,9 +4,9 @@
 <footer class="container-fluid mt-auto py-5">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-            <img src="{% static 'img/design/brand-logo.webp' %}" alt="FineChop brand logo" width="250">
+            <img src="{% static 'img/design/brand-logo.webp' %}" alt="FineChop brand logo" class="footer-logo">
             <div class="footer-links mt-3">
-                <ul class="col-12">
+                <ul class="col-12 social-links">
                     <li class="mx-2">
                         <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
                                 class="
