--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,7 @@
 {% comment %} Footer {% endcomment %}
 <footer class="container-fluid mt-auto py-5">
     <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 d-flex flex-column align-items-center">
             <img src="{% static 'img/design/brand-logo.webp' %}" alt="FineChop brand logo" class="footer-logo">
             <div class="footer-links mt-3">
                 <ul class="col-12 social-links">
@@ -20,6 +20,8 @@
                                 class="fa-brands fa-twitter"></i></a></li>
                 </ul>
             </div>
+            <p class="text-justify"><strong>FineChop</strong> has the pleasure of serving popular and authentic Asian dishes. We aim to bring
+                you the best meals whether you order online or dine in.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 support-icons">
             <h4>Support</h4>
@@ -68,6 +70,11 @@
                 <input class="subscription text-center w-75" type="email" id="email" name="email" placeholder="Enter your e-mail address">
                 <button class="btn text-white mt-2 w-75 shadow">Subscribe</button>
             </form>
+            <p class="w-75 text-center mt-5">&copy; Created by <strong><a class="text-decoration-none copyright"
+                        href="https://github.com/KristianColville1"
+                        target="_blank" rel="noopener" aria-label="Click here to view Kristian Colville GitHub
+                        profile">Kristian Colville <i class="fa-brands fa-github"></i></a>
+                </strong></p>
         </div>
     </div>
 </footer>
