--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="FineChop - Asian-style restaurant/takeaway service in Dublin City">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Asian-style, food, order, menu, reservations, reserve, restaurant, dine-in, Thai, Chinese, Korean">
     <meta name="theme-color" content="#ffbf7d" />
     <meta name="author" content="Kristian Colville">
     {% comment %} Favicon {% endcomment %}
@@ -22,14 +22,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     {% comment %} custom css {% endcomment %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block extra_css %}{% endblock %}
     <title>FineChop</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <header>
-        <nav class="navbar navbar-expand-lg fixed-top"></nav>
+    
+    <header class="container-fluid g-0">
+        <nav class="container navbar navbar-expand-lg fixed-top">
+            <a class="navbar-brand" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
+        </nav>
     </header>
 
     {% block content %}
