--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,18 +5,20 @@
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 d-flex flex-column align-items-center">
             <img src="{% static 'img/design/brand-logo.webp' %}" alt="FineChop brand logo" class="footer-logo">
-            <div class="footer-links mt-3">
+            <div class="footer-links my-4">
                 <ul class="col-12 social-links">
                     <li class="mx-2">
-                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
+                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label="Click here to go to our Facebook page"><i
                                 class="
                 fa-brands fa-facebook-f"></i></a></li>
                     <li class="mx-2">
-                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
+                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
+                            aria-label="Click here to go to our Instagram page"><i
                                 class="
                 fa-brands fa-instagram"></i></a></li>
                     <li class="mx-2">
-                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener" aria-label=""><i
+                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
+                            aria-label="Click here to go to our Twitter page"><i
                                 class="fa-brands fa-twitter"></i></a></li>
                 </ul>
             </div>
@@ -25,7 +27,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 support-icons">
             <h4>Support</h4>
-            <ul class="mt-3">
+            <ul>
                 <li><a class="text-decoration-none" href="tel://0209126583" target="_blank" rel="noopener"
                         aria-label="Click here to call FineChop"><i class="fa-solid fa-phone mr-2"></i>
                         020-912-6583</a>
