--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,18 @@ header {
     border-top: 4px outset var(--new-york-pink);
 }
 
+nav {
+    max-width: 1600px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nav-bg {
+    background-color: var(--matte-black);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+}
+
 .navbar-brand {
     height: 100px;
     width: 300px;
@@ -46,8 +58,31 @@ div.navbar-collapse {
     text-transform: uppercase;
 }
 
-.nav-link {
-    color: var(--yellow-orange-color-wheel);
+.nav-social li {
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+    border: 2px solid white;
+    border-radius: 50%;
+
+    position: relative;
+}
+
+.nav-social li a {
+    padding: 17px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.navbar-nav .nav-link a:hover,
+.nav-social li a:hover,
+.nav-social li:hover,
+.nav-social li:hover a {
+    color: var(--new-york-pink);
+    border-color: var(--new-york-pink);
+    transition: all 0.2s ease-in-out;
 }
 
 /* ham menu */
@@ -117,13 +152,13 @@ div.navbar-collapse {
 /* -------------------------------------------------------Home */
 
 
-.home-landing,
+.home-landing-lg,
 .home-overlay {
     height: 100vh;
     width: 100%;
 }
 
-.home-landing {
+.home-landing-lg {
     position: relative;
     overflow: clip !important;
 }
@@ -134,8 +169,11 @@ div.navbar-collapse {
     opacity: 0.5;
 }
 
-.home-img-container img {
+.home-img {
     width: 100%;
+    height: 100%;
+    background: url('../img/home-page/home-2.webp') no-repeat center center;
+    background-size: cover;
 }
 
 /* -------------------------------------------------------Footer */
@@ -169,7 +207,7 @@ footer a,
 .footer-links a {
     color: white;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .footer-links a i {
@@ -190,7 +228,7 @@ footer .footer-links ul li:hover a {
 }
 
 footer h4 {
-    text-indent: 20px;
+    text-indent: 18px;
     color: var(--mellow-apricot);
 }
 
@@ -228,6 +266,11 @@ input.subscription~button:active {
 }
 
 /* -------------------------------------------------------Media Queries */
+
+@media only screen and (max-width: 1195px){
+
+}
+
 @media only screen and (max-width: 575px){
 
     .footer-logo,
