--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="FineChop - Asian-style restaurant/takeaway service in Dublin City">
-    <meta name="keywords" content="Asian-style, food, order, menu, reservations, reserve, restaurant, dine-in, Thai, Chinese, Korean">
+    <meta name="keywords"
+        content="Asian-style, food, order, menu, reservations, reserve, restaurant, dine-in, Thai, Chinese, Korean">
     <meta name="theme-color" content="#ffbf7d" />
     <meta name="author" content="Kristian Colville">
     {% comment %} Favicon {% endcomment %}
@@ -19,8 +20,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
     {% comment %} bootstrap css {% endcomment %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% comment %} custom css {% endcomment %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,11 +32,14 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    
-    <header class="container-fluid g-0">
-        <nav class="container navbar navbar-expand-lg fixed-top">
-            <a class="navbar-brand" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
-        </nav>
+
+    <header class="container-fluid g-0 nav-container">
+        <div class="nav-wrapper fixed-top">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
+            </nav>
+        </div>
+
     </header>
 
     {% block content %}
@@ -44,11 +48,11 @@
     {% include "includes/footer.html" %}
     <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
     {% comment %} bootstrap bundle {% endcomment %}
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
     {% comment %} Custom js {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.1.slim.js"
