Format allauth to dylint specs and added basic classes

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,16 +1,25 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
-
+{% load crispy_forms_tags %}
+{% block head_title %}
+    {% trans "Change Password" %}
+{% endblock head_title %}
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Change Password" %}</h1>
+                <hr/>
+                <form method="post"
+                      action="{% url "account_change_password" %}"
+                      class="password_change">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button type="submit" name="action" class="btn btn-outline-warning">{% trans "Change Password" %}</button>
+                    <a href="{% url 'account_reset_password' %}"
+                       class="btn btn-outline-info text-uppercase my-2">{% trans "Forgot Password?" %}</a>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
