--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,24 +1,35 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
 {% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
-
+{% load crispy_forms_tags %}
+{% block head_title %}
+    {% trans "Password Reset" %}
+{% endblock head_title %}
 {% block content %}
-
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Password Reset" %}</h1>
+                <hr/>
+                {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+                <p class="text-center">
+                    {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+                </p>
+                <form method="post"
+                      action="{% url "account_reset_password" %}"
+                      class="password_reset">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input type="submit"
+                           value="{% trans "Reset My Password" %}"
+                           class="btn w-100 btn-outline-danger text-uppercase my-2"/>
+                </form>
+                <p class="text-center">
+                    {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+                </p>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
