--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,19 +1,38 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
-
+{% load crispy_forms_tags %}
+{% block head_title %}
+    {% trans "Change Password" %}
+{% endblock head_title %}
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">
+                    {% if token_fail %}
+                        {% trans "Bad Token" %}
+                    {% else %}
+                        {% trans "Change Password" %}
+                    {% endif %}
+                </h1>
+                <hr/>
+                {% if token_fail %}
+                    {% url 'account_reset_password' as passwd_reset_url %}
+                    <p>
+                        {% blocktrans %}The password reset link was invalid, possibly because it has already been used.
+                Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
+                    </p>
+                {% else %}
+                    <form method="post" action="{{ action_url }}">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <input type="submit"
+                               name="action"
+                               value="{% trans "change password" %}"
+                               class="btn general-btn text-uppercase my-2"/>
+                    </form>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock content %}
