--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,20 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
-
+{% block head_title %}
+    {% trans "Change Password" %}
+{% endblock head_title %}
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Change Password" %}</h1>
+                <hr/>
+                <p class="text-center">{% trans "Your password is now changed." %}</p>
+                <a href="{% url "account_login" %}"
+                   aria-label="Click here to sign in"
+                   class="btn btn-outline-primary w-100"
+                   role="button">Login</a>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
