--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,21 +1,28 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
-
+{% block head_title %}
+    {% trans "Sign Out" %}
+{% endblock head_title %}
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
-
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
-
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Sign Out" %}</h1>
+                <hr/>
+                <p class="text-center">{% trans "Are you sure you want to sign out?" %}</p>
+                <form method="post" action="{% url 'account_logout' %}">
+                    {% csrf_token %}
+                    {% if redirect_field_value %}
+                        <input type="hidden"
+                               name="{{ redirect_field_name }}"
+                               value="{{ redirect_field_value }}"/>
+                    {% endif %}
+                    <div class="d-flex flex-row">
+                        <a href="{% url "/" %}" class="btn btn-outline-primary w-50 mx-1">Go Back</a>
+                        <button class="btn btn-danger w-50 mx-1" type="submit">{% trans "Sign Out" %}</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
