--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,16 +1,23 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
 {% load account %}
-
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
-
+{% block head_title %}
+    {% trans "Password Reset" %}
+{% endblock head_title %}
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Password Reset" %}</h1>
+                <hr/>
+                {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+                <p class="text-center">
+                    {% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam
+                folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
+                </p>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
