--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,15 +1,25 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Set Password" %}{% endblock %}
-
+{% load crispy_forms_tags %}
+{% block head_title %}
+    {% trans "Set Password" %}
+{% endblock head_title %}
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Set Password" %}</h1>
+                <form method="post"
+                      action="{% url "account_set_password" %}"
+                      class="password_set">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input type="submit"
+                           name="action"
+                           value="{% trans "Set Password" %}"
+                           class="btn w-100 log-op-btn text-uppercase my-2"/>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
