--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,21 +1,33 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Signup" %}{% endblock %}
-
+{% load crispy_forms_tags %}
+{% block head_title %}
+    {% trans "Signup" %}
+{% endblock head_title %}
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Sign Up" %}</h1>
+                <hr/>
+                <p>
+                    {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign
+          in</a>.{% endblocktrans %}
+                </p>
+                <form class="signup"
+                      id="signup_form"
+                      method="post"
+                      action="{% url 'account_signup' %}">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    {% if redirect_field_value %}
+                        <input type="hidden"
+                               name="{{ redirect_field_name }}"
+                               value="{{ redirect_field_value }}"/>
+                    {% endif %}
+                    <button class="btn w-100 btn-outline-primary text-uppercase my-2" type="submit">{% trans "Sign Up" %}</button>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
