--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -1,11 +1,16 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-
-{% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
-
+{% block head_title %}
+    {% trans "Sign Up Closed" %}
+{% endblock head_title %}
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
-
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
-{% endblock %}
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+                <h1 class="text-center">{% trans "Sign Up Closed" %}</h1>
+                <hr/>
+                <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
