--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Password Reset" %}</h1>
                 <hr/>
                 {% if user.is_authenticated %}
@@ -19,7 +19,7 @@
                 </p>
                 <form method="post"
                       action="{% url "account_reset_password" %}"
-                      class="password_reset">
+                      class="password_reset allauth-form-inner-content">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <input type="submit"
