--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">
                     {% if token_fail %}
                         {% trans "Bad Token" %}
@@ -18,12 +18,12 @@
                 <hr/>
                 {% if token_fail %}
                     {% url 'account_reset_password' as passwd_reset_url %}
-                    <p>
+                    <p class="text-center">
                         {% blocktrans %}The password reset link was invalid, possibly because it has already been used.
                 Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
                     </p>
                 {% else %}
-                    <form method="post" action="{{ action_url }}">
+                    <form method="post" action="{{ action_url }}" class="allauth-form-inner-content">
                         {% csrf_token %}
                         {{ form|crispy }}
                         <input type="submit"
