--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -5,9 +5,9 @@
     {% trans "E-mail Addresses" %}
 {% endblock head_title %}
 {% block content %}
-    <div class="container">
-        <div class="row mt-4">
-            <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "E-mail Addresses" %}</h1>
                 <hr />
                 {% if user.emailaddress_set.all %}
@@ -15,7 +15,8 @@
                         {% trans "The following e-mail addresses are associated with your
                         account:" %}
                     </p>
-                    <form action="{% url 'account_email' %}" class="email_list" method="post">
+                    <form action="{% url 'account_email' %}" class="email_list allauth-form-inner-content"
+                        method="post">
                         {% csrf_token %}
                         <fieldset class="blockLabels">
                             {% for emailaddress in user.emailaddress_set.all %}
@@ -48,7 +49,7 @@
                                 </fieldset>
                             </form>
                         {% else %}
-                            <p>
+                            <p class="text-center">
                                 <strong>{% trans "Warning:" %}</strong>
                                 {% trans "You currently do not have any e-mail address set up. You
                                 should really add an e-mail address so you can receive notifications,
