--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,11 +6,11 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Sign Out" %}</h1>
                 <hr/>
                 <p class="text-center">{% trans "Are you sure you want to sign out?" %}</p>
-                <form method="post" action="{% url 'account_logout' %}">
+                <form method="post" action="{% url 'account_logout' %}" class="allauth-form-inner-content">
                     {% csrf_token %}
                     {% if redirect_field_value %}
                         <input type="hidden"
