--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -7,12 +7,12 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Change Password" %}</h1>
                 <hr/>
                 <form method="post"
                       action="{% url "account_change_password" %}"
-                      class="password_change">
+                      class="password_change allauth-form-inner-content">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <button type="submit" name="action" class="btn btn-outline-warning">{% trans "Change Password" %}</button>
