--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Password Reset" %}</h1>
                 <hr/>
                 {% if user.is_authenticated %}
