--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -7,11 +7,11 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Set Password" %}</h1>
                 <form method="post"
                       action="{% url "account_set_password" %}"
-                      class="password_set">
+                      class="password_set allauth-form-inner-content">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <input type="submit"
