--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -6,10 +6,10 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Sign Up Closed" %}</h1>
                 <hr/>
-                <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+                <p class="text-center">{% trans "We are sorry, but the sign up is currently closed." %}</p>
             </div>
         </div>
     </div>
