--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -6,10 +6,10 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4">
-        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 text-center">
+        <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
                 <h1 class="text-center">{% trans "Verify Your E-mail Address" %}</h1>
                 <hr/>
-                <p>
+                <p class="text-center">
                     {% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}
                 </p>
             </div>
