--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="nav-link bg-orange shadow">
+                        <li class="nav-link mx-md-3 bg-orange">
                             <a href="#">Order</a>
                         </li>
                         <li class="nav-link">
